update accesibility and assets

--- a/index.html
+++ b/index.html
@@ -408,8 +408,8 @@
         </div>
         <div class="acc-card" id="jawa-btn">
           <img
-            src="./assets/icons/darkmode.svg"
-            alt="darkmode"
+            src="./assets/icons/translatejawa.svg"
+            alt="translatejawa"
             class="invert-icons"
           />
           Bahasa Jawa
