--- a/pages/berita-list.html
+++ b/pages/berita-list.html
@@ -138,76 +138,101 @@
       >
     </section>
 
-    <div class="accessibility">
-      <div class="acc-img-container">
-        <img
-          src="../assets/icons/accessability.png"
-          alt="accessability"
-          id="accessability-btn"
-        />
-      </div>
+    <div class="accessibility-btn">
+      <img
+        src="../assets/icons/accessability.png"
+        alt="accessability"
+        id="accessability-btn"
+      />
+    </div>
 
-      <div class="accessibility-menu">
-        <img
-          src="../assets/icons/close.svg"
-          alt="X"
-          id="acc-close-btn"
-          class="invert-icons"
-        />
-        <p class="acc-menu-title">Menu Aksesibilitas</p>
-        <div class="horizontal-line"></div>
-        <div class="acc-row">
-          <div class="acc-card" id="darkmode-btn">
-            <img
-              src="../assets/icons/darkmode.svg"
-              alt="darkmode"
-              class="invert-icons"
-            />
-            Mode Gelap
-          </div>
-          <div class="acc-card" id="smalltext-btn">
-            <img
-              src="../assets/icons/darkmode.svg"
-              alt="darkmode"
-              class="invert-icons"
-            />
-            Perkecil Teks
-          </div>
-          <div class="acc-card" id="bigtext-btn">
-            <img
-              src="../assets/icons/darkmode.svg"
-              alt="darkmode"
-              class="invert-icons"
-            />
-            Perbesar Teks
+    <div class="accessibility-menu">
+      <img
+        src="../assets/icons/close.svg"
+        alt="X"
+        id="acc-close-btn"
+        class="invert-icons"
+      />
+      <p class="acc-menu-title">Menu Aksesibilitas</p>
+      <div class="horizontal-line"></div>
+      <div class="acc-row">
+        <div class="acc-card" id="darkmode-btn">
+          <img
+            src="../assets/icons/darkmode.svg"
+            alt="darkmode"
+            class="invert-icons"
+          />
+          Mode Gelap
+        </div>
+        <div class="acc-card" id="saturation-btn">
+          <img
+            src="../assets/icons/saturation.svg"
+            alt="saturation"
+            class="invert-icons"
+          />
+          Kejenuhan
+          <div class="steps-container" id="saturation-steps">
+            <div class="steps"></div>
+            <div class="steps"></div>
+            <div class="steps"></div>
           </div>
         </div>
-        <div class="acc-row">
-          <div class="acc-card" id="saturation-btn">
-            <img
-              src="../assets/icons/darkmode.svg"
-              alt="darkmode"
-              class="invert-icons"
-            />
-            Kejenuhan
-          </div>
-          <div class="acc-card" id="disleksia-btn">
-            <img
-              src="../assets/icons/darkmode.svg"
-              alt="darkmode"
-              class="invert-icons"
-            />
-            Ramah Disleksia
-          </div>
-          <div class="acc-card" id="sunda-btn">
-            <img
-              src="../assets/icons/darkmode.svg"
-              alt="darkmode"
-              class="invert-icons"
-            />
-            Bahasa Sunda
+      </div>
+      <div class="acc-row">
+        <div class="acc-card" id="smalltext-btn">
+          <img
+            src="../assets/icons/shrink.svg"
+            alt="shrink"
+            class="invert-icons slight-big"
+          />
+          Perkecil Teks
+          <div class="steps-container" id="smalltext-steps">
+            <div class="steps"></div>
+            <div class="steps"></div>
+            <div class="steps"></div>
           </div>
         </div>
+        <div class="acc-card" id="bigtext-btn">
+          <img
+            src="../assets/icons/enlarge.svg"
+            alt="enlarge"
+            class="invert-icons slight-big"
+          />
+          Perbesar Teks
+          <div class="steps-container" id="bigtext-steps">
+            <div class="steps"></div>
+            <div class="steps"></div>
+            <div class="steps"></div>
+          </div>
+        </div>
+      </div>
+      <div class="acc-row">
+        <div class="acc-card" id="disleksia-btn">
+          <img
+            src="../assets/icons/dyslexic.svg"
+            alt="dyslexic"
+            class="invert-icons slight-small"
+          />
+          Ramah Disleksia
+        </div>
+        <div class="acc-card" id="jawa-btn">
+          <img
+            src="../assets/icons/translatejawa.svg"
+            alt="translatejawa"
+            class="invert-icons"
+          />
+          Bahasa Jawa
+        </div>
+      </div>
+      <div class="reset-btn-container">
+        <button class="reset-btn" id="reset-btn">
+          <img
+            src="../assets/icons/reset.svg"
+            alt="reset"
+            class="invert-icons"
+          />
+          Atur Ulang Semua
+        </button>
       </div>
     </div>
 
