init javanese, update links, add news

--- a/pages/berita-list.html
+++ b/pages/berita-list.html
@@ -239,5 +239,6 @@
     <script src="../components/renderNews.js"></script>
     <script src="../components/beritaList.js"></script>
     <script src="../components/accessibility.js"></script>
+    <script src="../components/scrollToHash.js"></script>
   </body>
 </html>
