added javanese translate

--- a/pages/berita-list.html
+++ b/pages/berita-list.html
@@ -236,6 +236,7 @@
       </div>
     </div>
 
+    <script src="../components/variables.js"></script>
     <script src="../components/renderNews.js"></script>
     <script src="../components/beritaList.js"></script>
     <script src="../components/accessibility.js"></script>
