--- a/pages/berita.html
+++ b/pages/berita.html
@@ -229,6 +229,7 @@
       </div>
     </div>
 
+    <script src="../components/variables.js"></script>
     <script src="../components/fullNews.js"></script>
     <script src="../components/columnNews.js"></script>
     <script src="../components/accessibility.js"></script>
