--- a/pages/layanan.html
+++ b/pages/layanan.html
@@ -179,6 +179,7 @@
       </div>
     </div>
 
+    <script src="../components/variables.js"></script>
     <script src="../components/navbar.js"></script>
     <script src="../components/accessibility.js"></script>
   </body>
