--- a/index.html
+++ b/index.html
@@ -427,6 +427,7 @@
       </div>
     </div>
 
+    <script src="../components/variables.js"></script>
     <script src="./components/navbar.js"></script>
     <script src="./components/renderNews.js"></script>
     <script src="./components/index.js"></script>
