init multiple pages, update styling, update navbar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="navbar">
       <div class="navbar-container">
-        <a href="../index.html">
+        <a href="./index.html">
           <img
             src="./assets/images/logo.png"
             alt="BatangKab"
@@ -30,15 +30,82 @@
             </div>
             <div class="dropdown-buffer"></div>
             <div class="dropdown-menu">
-              <a href="./pages/struktur.html">Batang Terkini</a>
+              <div class="navbar-drop-sidebar-container">
+                <div class="navbar-drop-sidebar-head">
+                  Batang Terkini
+                  <img
+                    src="./assets/icons/triangle-right.svg"
+                    alt=">"
+                    class="invert-icons"
+                  />
+                </div>
+                <div class="dropdown-buffer-vertical"></div>
+                <div class="navbar-drop-sidebar">
+                  <a href="./pages/berita-list.html#Pemerintahan"
+                    >Berita Pemerintahan</a
+                  >
+                  <div class="horizontal-line thin"></div>
+                  <a href="./pages/berita-list.html#Pembangunan"
+                    >Berita Pembangunan</a
+                  >
+                  <div class="horizontal-line thin"></div>
+                  <a href="./pages/berita-list.html#Sosial">Berita Sosial</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./pages/berita-list.html#Teknologi"
+                    >Berita Teknologi</a
+                  >
+                </div>
+              </div>
+
               <div class="horizontal-line thin"></div>
-              <a href="./pages/visi-misi.html">Kilas Batang</a>
+              <a href="./pages/sejarah.html">Sejarah Batang</a>
               <div class="horizontal-line thin"></div>
-              <a href="./pages/bupati.html">Geografis</a>
+              <a href="./pages/geografis.html">Geografis</a>
               <div class="horizontal-line thin"></div>
-              <a href="./pages/bupati.html">Wilayah</a>
+
+              <div class="navbar-drop-sidebar-container">
+                <div class="navbar-drop-sidebar-head">
+                  Wilayah
+                  <img
+                    src="./assets/icons/triangle-right.svg"
+                    alt=">"
+                    class="invert-icons"
+                  />
+                </div>
+                <div class="dropdown-buffer-vertical"></div>
+                <div class="navbar-drop-sidebar">
+                  <a href="./index.html">test</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./index.html">test</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./index.html">test</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./index.html">test</a>
+                </div>
+              </div>
+
               <div class="horizontal-line thin"></div>
-              <a href="./pages/bupati.html">Potensi</a>
+
+              <div class="navbar-drop-sidebar-container">
+                <div class="navbar-drop-sidebar-head">
+                  Potensi
+                  <img
+                    src="./assets/icons/triangle-right.svg"
+                    alt=">"
+                    class="invert-icons"
+                  />
+                </div>
+                <div class="dropdown-buffer-vertical"></div>
+                <div class="navbar-drop-sidebar">
+                  <a href="./index.html">test</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./index.html">test</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./index.html">test</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./index.html">test</a>
+                </div>
+              </div>
             </div>
           </div>
 
@@ -49,15 +116,57 @@
             </div>
             <div class="dropdown-buffer"></div>
             <div class="dropdown-menu">
-              <a href="./pages/struktur.html">Batang Terkini</a>
+              <a href="./pages/lambang.html">Lambang Daerah</a>
               <div class="horizontal-line thin"></div>
-              <a href="./pages/visi-misi.html">Kilas Batang</a>
+
+              <div class="navbar-drop-sidebar-container">
+                <div class="navbar-drop-sidebar-head">
+                  Profil Bupati dan Wakil Bupati
+                  <img
+                    src="./assets/icons/triangle-right.svg"
+                    alt=">"
+                    class="invert-icons"
+                  />
+                </div>
+                <div class="dropdown-buffer-vertical"></div>
+                <div class="navbar-drop-sidebar">
+                  <a href="./pages/profilbupati.html">Bupati</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./pages/profilwakil.html">Wakil Bupati</a>
+                </div>
+              </div>
+
               <div class="horizontal-line thin"></div>
-              <a href="./pages/bupati.html">Geografis</a>
+
+              <div class="navbar-drop-sidebar-container">
+                <div class="navbar-drop-sidebar-head">
+                  Profil Perangkat Daerah
+                  <img
+                    src="./assets/icons/triangle-right.svg"
+                    alt=">"
+                    class="invert-icons"
+                  />
+                </div>
+                <div class="dropdown-buffer-vertical"></div>
+                <div class="navbar-drop-sidebar">
+                  <a href="./pages/profilperangkat.html">Sekretariat Daerah</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./pages/profilperangkat.html">Sekretariat DPRD</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./pages/profilperangkat.html"
+                    >Badan, Dinas, Kantor, & Lembaga Teknis</a
+                  >
+                  <div class="horizontal-line thin"></div>
+                  <a href="./pages/profilperangkat.html"
+                    >Kecamatan dan Kelurahan</a
+                  >
+                </div>
+              </div>
+
               <div class="horizontal-line thin"></div>
-              <a href="./pages/bupati.html">Wilayah</a>
+              <a href="./pages/visimisi.html">Visi dan Misi Pemerintahan</a>
               <div class="horizontal-line thin"></div>
-              <a href="./pages/bupati.html">Potensi</a>
+              <a href="./pages/prestasi.html">Prestasi Kerja</a>
             </div>
           </div>
 
@@ -68,15 +177,38 @@
             </div>
             <div class="dropdown-buffer"></div>
             <div class="dropdown-menu">
-              <a href="./pages/struktur.html">Batang Terkini</a>
+              <a href="./index.html"
+                >Harga Kebutuhan Pokok Masyarakat Kabupaten Batang</a
+              >
               <div class="horizontal-line thin"></div>
-              <a href="./pages/visi-misi.html">Kilas Batang</a>
+              <a href="./index.html">LKJIP Kabupaten Batang</a>
               <div class="horizontal-line thin"></div>
-              <a href="./pages/bupati.html">Geografis</a>
+              <a href="./index.html">Dokumentasi Publikasi Ijin Lingkungan</a>
               <div class="horizontal-line thin"></div>
-              <a href="./pages/bupati.html">Wilayah</a>
+              <a href="./index.html"
+                >Transparansi Pengelolaan Anggaran Daerah</a
+              >
               <div class="horizontal-line thin"></div>
-              <a href="./pages/bupati.html">Potensi</a>
+              <a href="./index.html">Rencana Umum Pengadaan</a>
+              <div class="horizontal-line thin"></div>
+              <a href="./index.html">Statistik Kabupaten Batang</a>
+              <div class="horizontal-line thin"></div>
+              <a href="./index.html"
+                >Transparansi dan Akuntabilitas Pengadaan Barang dan Jasa
+              </a>
+              <div class="horizontal-line thin"></div>
+              <a href="./index.html"
+                >Informasi Realisasi Rencana Aksi Pencegahan dan Pemberantasan
+                Korupsi</a
+              >
+              <div class="horizontal-line thin"></div>
+              <a href="./index.html"
+                >Laporan Akuntabilitas Kinerja Instansi Pemerintah</a
+              >
+              <div class="horizontal-line thin"></div>
+              <a href="./index.html">e-LHKPN Pemerintah Kabupaten Batang</a>
+              <div class="horizontal-line thin"></div>
+              <a href="./index.html">SiRUP (Rencana Umum Pengadaan)</a>
             </div>
           </div>
 
