--- a/pages/berita.html
+++ b/pages/berita.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../assets/styles/hero.css" />
     <link rel="stylesheet" href="../assets/styles/footer.css" />
     <link rel="stylesheet" href="../assets/styles/accessibility.css" />
+    <link rel="stylesheet" href="../assets/styles/pages-template.css" />
     <link rel="stylesheet" href="../assets/styles/berita.css" />
   </head>
   <body>
@@ -31,15 +32,80 @@
               </div>
               <div class="dropdown-buffer"></div>
               <div class="dropdown-menu">
-                <a href="../index.html">Batang Terkini</a>
+                <div class="navbar-drop-sidebar-container">
+                  <div class="navbar-drop-sidebar-head">
+                    Batang Terkini
+                    <img
+                      src="../assets/icons/triangle-right.svg"
+                      alt=">"
+                      class="invert-icons"
+                    />
+                  </div>
+                  <div class="dropdown-buffer-vertical"></div>
+                  <div class="navbar-drop-sidebar">
+                    <a href="./berita-list.html#Pemerintahan"
+                      >Berita Pemerintahan</a
+                    >
+                    <div class="horizontal-line thin"></div>
+                    <a href="./berita-list.html#Pembangunan"
+                      >Berita Pembangunan</a
+                    >
+                    <div class="horizontal-line thin"></div>
+                    <a href="./berita-list.html#Sosial">Berita Sosial</a>
+                    <div class="horizontal-line thin"></div>
+                    <a href="./berita-list.html#Teknologi">Berita Teknologi</a>
+                  </div>
+                </div>
+
                 <div class="horizontal-line thin"></div>
-                <a href="../index.html">Kilas Batang</a>
+                <a href="./sejarah.html">Sejarah Batang</a>
                 <div class="horizontal-line thin"></div>
-                <a href="../index.html">Geografis</a>
+                <a href="./geografis.html">Geografis</a>
                 <div class="horizontal-line thin"></div>
-                <a href="../index.html">Wilayah</a>
+
+                <div class="navbar-drop-sidebar-container">
+                  <div class="navbar-drop-sidebar-head">
+                    Wilayah
+                    <img
+                      src="../assets/icons/triangle-right.svg"
+                      alt=">"
+                      class="invert-icons"
+                    />
+                  </div>
+                  <div class="dropdown-buffer-vertical"></div>
+                  <div class="navbar-drop-sidebar">
+                    <a href="../index.html">test</a>
+                    <div class="horizontal-line thin"></div>
+                    <a href="../index.html">test</a>
+                    <div class="horizontal-line thin"></div>
+                    <a href="../index.html">test</a>
+                    <div class="horizontal-line thin"></div>
+                    <a href="../index.html">test</a>
+                  </div>
+                </div>
+
                 <div class="horizontal-line thin"></div>
-                <a href="../index.html">Potensi</a>
+
+                <div class="navbar-drop-sidebar-container">
+                  <div class="navbar-drop-sidebar-head">
+                    Potensi
+                    <img
+                      src="../assets/icons/triangle-right.svg"
+                      alt=">"
+                      class="invert-icons"
+                    />
+                  </div>
+                  <div class="dropdown-buffer-vertical"></div>
+                  <div class="navbar-drop-sidebar">
+                    <a href="../index.html">test</a>
+                    <div class="horizontal-line thin"></div>
+                    <a href="../index.html">test</a>
+                    <div class="horizontal-line thin"></div>
+                    <a href="../index.html">test</a>
+                    <div class="horizontal-line thin"></div>
+                    <a href="../index.html">test</a>
+                  </div>
+                </div>
               </div>
             </div>
 
@@ -50,15 +116,55 @@
               </div>
               <div class="dropdown-buffer"></div>
               <div class="dropdown-menu">
-                <a href="../index.html">Batang Terkini</a>
+                <a href="./lambang.html">Lambang Daerah</a>
                 <div class="horizontal-line thin"></div>
-                <a href="../index.html">Kilas Batang</a>
+
+                <div class="navbar-drop-sidebar-container">
+                  <div class="navbar-drop-sidebar-head">
+                    Profil Bupati dan Wakil Bupati
+                    <img
+                      src="../assets/icons/triangle-right.svg"
+                      alt=">"
+                      class="invert-icons"
+                    />
+                  </div>
+                  <div class="dropdown-buffer-vertical"></div>
+                  <div class="navbar-drop-sidebar">
+                    <a href="./profilbupati.html">Bupati</a>
+                    <div class="horizontal-line thin"></div>
+                    <a href="./profilwakil.html">Wakil Bupati</a>
+                  </div>
+                </div>
+
                 <div class="horizontal-line thin"></div>
-                <a href="../index.html">Geografis</a>
+
+                <div class="navbar-drop-sidebar-container">
+                  <div class="navbar-drop-sidebar-head">
+                    Profil Perangkat Daerah
+                    <img
+                      src="../assets/icons/triangle-right.svg"
+                      alt=">"
+                      class="invert-icons"
+                    />
+                  </div>
+                  <div class="dropdown-buffer-vertical"></div>
+                  <div class="navbar-drop-sidebar">
+                    <a href="./profilperangkat.html">Sekretariat Daerah</a>
+                    <div class="horizontal-line thin"></div>
+                    <a href="./profilperangkat.html">Sekretariat DPRD</a>
+                    <div class="horizontal-line thin"></div>
+                    <a href="./profilperangkat.html"
+                      >Badan, Dinas, Kantor, & Lembaga Teknis</a
+                    >
+                    <div class="horizontal-line thin"></div>
+                    <a href="./profilperangkat.html">Kecamatan dan Kelurahan</a>
+                  </div>
+                </div>
+
                 <div class="horizontal-line thin"></div>
-                <a href="../index.html">Wilayah</a>
+                <a href="./visimisi.html">Visi dan Misi Pemerintahan</a>
                 <div class="horizontal-line thin"></div>
-                <a href="../index.html">Potensi</a>
+                <a href="./prestasi.html">Prestasi Kerja</a>
               </div>
             </div>
 
@@ -69,19 +175,44 @@
               </div>
               <div class="dropdown-buffer"></div>
               <div class="dropdown-menu">
-                <a href="../index.html">Batang Terkini</a>
+                <a href="../index.html"
+                  >Harga Kebutuhan Pokok Masyarakat Kabupaten Batang</a
+                >
                 <div class="horizontal-line thin"></div>
-                <a href="../index.html">Kilas Batang</a>
+                <a href="../index.html">LKJIP Kabupaten Batang</a>
                 <div class="horizontal-line thin"></div>
-                <a href="../index.html">Geografis</a>
+                <a href="../index.html"
+                  >Dokumentasi Publikasi Ijin Lingkungan</a
+                >
                 <div class="horizontal-line thin"></div>
-                <a href="../index.html">Wilayah</a>
+                <a href="../index.html"
+                  >Transparansi Pengelolaan Anggaran Daerah</a
+                >
                 <div class="horizontal-line thin"></div>
-                <a href="../index.html">Potensi</a>
+                <a href="../index.html">Rencana Umum Pengadaan</a>
+                <div class="horizontal-line thin"></div>
+                <a href="../index.html">Statistik Kabupaten Batang</a>
+                <div class="horizontal-line thin"></div>
+                <a href="../index.html"
+                  >Transparansi dan Akuntabilitas Pengadaan Barang dan Jasa</a
+                >
+                <div class="horizontal-line thin"></div>
+                <a href="../index.html"
+                  >Informasi Realisasi Rencana Aksi Pencegahan dan Pemberantasan
+                  Korupsi</a
+                >
+                <div class="horizontal-line thin"></div>
+                <a href="../index.html"
+                  >Laporan Akuntabilitas Kinerja Instansi Pemerintah</a
+                >
+                <div class="horizontal-line thin"></div>
+                <a href="../index.html">e-LHKPN Pemerintah Kabupaten Batang</a>
+                <div class="horizontal-line thin"></div>
+                <a href="../index.html">SiRUP (Rencana Umum Pengadaan)</a>
               </div>
             </div>
 
-            <a href="./pages/layanan.html" class="nav-link nav-item">Layanan</a>
+            <a href="./layanan.html" class="nav-link nav-item">Layanan</a>
           </div>
           <div class="search-bar">
             <input
