berita-foto implementation

--- a/index.html
+++ b/index.html
@@ -332,106 +332,9 @@
         </div>
 
         <div class="main-sections-container">
-          <div class="berita-foto-row">
-            <div class="berita-foto-container">
-              <a href="" class="berita-foto-link">
-                <img src="./assets/images/berita/b_foto_1.jpg" alt="1" />
-                Tandatangan Pakta Integritas
-              </a>
-            </div>
-            <div class="berita-foto-container">
-              <a href="" class="berita-foto-link">
-                <img src="./assets/images/berita/b_foto_2.jpg" alt="2" />
-                Pelantikan 1.516 PPPK
-              </a>
-            </div>
-            <div class="berita-foto-container">
-              <a href="" class="berita-foto-link">
-                <img src="./assets/images/berita/b_foto_3.jpg" alt="3" />
-                Penghargaan PNS Berprestasi
-              </a>
-            </div>
-          </div>
+          <div class="berita-foto-row" id="berita-foto-row-1"> </div>
 
-          <div class="berita-foto-row">
-            <div class="berita-foto-container">
-              <a href="" class="berita-foto-link">
-                <img src="./assets/images/berita/b_foto_4.jpg" alt="4" />
-                Sumpah Janji Pimpinan DPRD Batang
-              </a>
-            </div>
-            <div class="berita-foto-container">
-              <a href="" class="berita-foto-link">
-                <img src="./assets/images/berita/b_foto_5.jpg" alt="5" />
-                Tandatangan Pakta Integritas
-              </a>
-            </div>
-            <div class="berita-foto-container">
-              <a href="" class="berita-foto-link">
-                <img src="./assets/images/berita/b_foto_6.jpg" alt="6" />
-                Bacaan Pakta Integritas
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="main-sections">
-        <div class="section-header">
-          <div class="triangle-link-container ai-c">
-            <a class="section-header-title">Channel <strong>Video</strong></a>
-            <img
-              src="./assets/icons/triangle-right.svg"
-              alt=">"
-              class="triangle-link-icon big-triangle"
-            />
-            <div class="hover-reveal">Lihat Lagi</div>
-          </div>
-          <div class="horizontal-line bg-primary-gradient"></div>
-        </div>
-
-        <div class="main-sections-container">
-          <div class="berita-foto-row">
-            <div class="berita-foto-container">
-              <a href="" class="berita-foto-link">
-                <img src="./assets/images/berita/b_foto_1.jpg" alt="1" />
-                Tandatangan Pakta Integritas
-              </a>
-            </div>
-            <div class="berita-foto-container">
-              <a href="" class="berita-foto-link">
-                <img src="./assets/images/berita/b_foto_2.jpg" alt="2" />
-                Pelantikan 1.516 PPPK
-              </a>
-            </div>
-            <div class="berita-foto-container">
-              <a href="" class="berita-foto-link">
-                <img src="./assets/images/berita/b_foto_3.jpg" alt="3" />
-                Penghargaan PNS Berprestasi
-              </a>
-            </div>
-          </div>
-
-          <div class="berita-foto-row">
-            <div class="berita-foto-container">
-              <a href="" class="berita-foto-link">
-                <img src="./assets/images/berita/b_foto_4.jpg" alt="4" />
-                Sumpah Janji Pimpinan DPRD Batang
-              </a>
-            </div>
-            <div class="berita-foto-container">
-              <a href="" class="berita-foto-link">
-                <img src="./assets/images/berita/b_foto_5.jpg" alt="5" />
-                Tandatangan Pakta Integritas
-              </a>
-            </div>
-            <div class="berita-foto-container">
-              <a href="" class="berita-foto-link">
-                <img src="./assets/images/berita/b_foto_6.jpg" alt="6" />
-                Bacaan Pakta Integritas
-              </a>
-            </div>
-          </div>
+          <div class="berita-foto-row" id="berita-foto-row-2"> </div>
         </div>
       </div>
     </section>
@@ -562,6 +465,7 @@
     <script src="../components/variables.js"></script>
     <script src="./components/navbar.js"></script>
     <script src="./components/renderNews.js"></script>
+    <script src="./components/renderPhotoNews.js"></script>
     <script src="./components/index.js"></script>
     <script src="./components/accessibility.js"></script>
   </body>
